deploy_k8s/iomp/iomp-d/CPAAS_MAOP_BAK/devk8s/imap-ftp-d/Application/ftp-ui_0w0_ftp-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    annotations:
        app.cpaas.io/last-replicas: "0"
        cpaas.io/creator: k00297
    labels:
        app.cpaas.io/name: ftp-ui.iomp-ftp-d
        cpaasAutoDeploy: "10"
    name: ftp-ui-ftp-ui
    namespace: iomp-ftp-d
spec:
    replicas: 1
    selector:
        matchLabels:
            project.cpaas.io/name: iomp
            service.cpaas.io/name: deployment-ftp-ui-ftp-ui
    strategy:
        rollingUpdate:
            maxSurge: 25%
            maxUnavailable: 25%
        type: RollingUpdate
    template:
        metadata:
            annotations:
                cpaas.io/creator: k00297
            labels:
                app: deployment-ftp-ui-ftp-ui
                app.cpaas.io/name: ftp-ui.iomp-ftp-d
                project.cpaas.io/name: iomp
                service.cpaas.io/name: deployment-ftp-ui-ftp-ui
                version: v1
        spec:
            containers:
                - image: harbor.td.io/iomp-d/ftp-ui:20201027_03
                  imagePullPolicy: IfNotPresent
                  name: ftp-ui
                  resources:
                    limits:
                        cpu: "1"
                        memory: 1Gi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            imagePullSecrets:
                - name: dockercfg--iomp--iomp-harbor
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 30
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
        cpaas.io/creator: k00297
        kubernetes.io/ingress.class: ""
        ncp/internal_ip_for_policy: 100.64.145.41
        ncp/use-regex: "true"
    labels:
        app.cpaas.io/name: ftp-ui.iomp-ftp-d
        cpaasAutoDeploy: "10"
    name: ftp-ui-ftp-ui
    namespace: iomp-ftp-d
spec:
    rules:
        - host: iomp-ftp.acp.td.io
          http:
            paths:
                - backend:
                    serviceName: ftp-ui-ftp-ui
                    servicePort: 8081
                  path: /.*
---
apiVersion: v1
kind: Service
metadata:
    annotations:
        cpaas.io/creator: k00297
    labels:
        app.cpaas.io/name: ftp-ui.iomp-ftp-d
        cpaasAutoDeploy: "10"
    name: ftp-ui-ftp-ui
    namespace: iomp-ftp-d
spec:
    ports:
        - name: tcp-8081-8081
          port: 8081
          protocol: TCP
          targetPort: 8081
        - name: tcp-9913-9913
          port: 9913
          protocol: TCP
          targetPort: 9913
    selector:
        service.cpaas.io/name: deployment-ftp-ui-ftp-ui
    sessionAffinity: None
    type: ClusterIP
